# precipitation-nowcasting

./: .gitignore  THOR_paper_text.txt  config.py  extract_pdf.py  fetch_mrms_10min.py  main.py  pyproject.toml
data/preprocessed-data/: frame_001.npy  frame_002.npy  frame_003.npy  frame_004.npy  frame_005.npy  frame_006.npy  frame_007.npy  frame_008.npy  frame_009.npy  frame_010.npy  frame_011.npy  frame_012.npy  frame_013.npy  frame_014.npy  frame_015.npy  frame_016.npy  frame_017.npy  frame_018.npy  frame_019.npy  frame_020.npy  frame_021.npy  frame_022.npy  frame_023.npy  frame_024.npy
thor/: data.py  losses.py  trainer.py  utils.py  velocity.py
thor/models/: conv_lstm.py  conv_lstm_2d.py  discriminator.py  flow_estimator.py  generator.py  horn_schunk_regularization.py  motion.py  traj_lstm.py
